# guess_the_number_dev

./: CMakeLists.txt  et --hard HEAD~1  mainwindow.cpp  mainwindow.h  mainwindow.ui
translations/: app_en.qm  app_en.ts  app_ru.ts
